[bugfix] - input color picker on windows is most visible with scale factor of 2 apparently

--- a/src/styles/_input_color.scss
+++ b/src/styles/_input_color.scss
@@ -19,7 +19,7 @@ input[type="color"]{
   appearance: none;
   border: 0;
   padding: 0;
-  transform: scale(6);
+  transform: scale(2);
   background: none;
   cursor: pointer;
 }
